# bash_wizard

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
bash_wizard/: wizard.py
src/bash_wizard/: __init__.py  messages.py  wizard.py
