[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bash_wizard"
dynamic = ["version"]
description = "An AI powered wizard to bash commands"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [{name = "Alexandre Prates", email = "ajfprates@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.3.0",
    "bashcolor>=1.1.1"
]

[project.urls]
Source = "https://github.com/alexandreprates/bash_wizard"

[project.scripts]
bash_wizard = "bash_wizard.wizard:run"

[tool.setuptools_scm]
